# OperatorNext

./: .env.example  .gitignore  README.md  README.zh-CN.md  docker-compose.yml
.cursor/rules/: backend.mdc  frontend.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pr_agent.yml  test.yml  validate-prs.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  run_e2b_examples.py
backend/api/: browser.py
backend/core/: prompts.py
backend/docker/: startup.sh
backend/docker/supervisor/: supervisord.conf
backend/docs/: autogen_four_agents_best_practices.md  autogen_swarm_pattern.md  browserless_http_api_integration.md  e2b-integration.md  e2b_code_team_practice.md
backend/labs/: README.md
backend/labs/autogen/: README.md
backend/labs/autogen/examples/: __init__.py  basic_chat.py  browser_team.py  simple_agent.py
backend/labs/autogen/examples/four_agents/: __init__.py  browser_tools.py  code_tools.py  sessions.py  team_four_agent.py
backend/labs/autogen/src/: agents.py  config.py
backend/labs/autogen/tests/: test_agents.py
backend/labs/browserless/: README.md  config.py  utils.py
backend/labs/browserless/examples/: advanced_demo.py  basic_operations.py  bing_search.py  concurrent_test.py  content_demo.py  function_api_demo.py  google_search.py  http_api_demo.py
backend/labs/common/: types.py  utils.py
backend/labs/e2b/: README.md  __init__.py  config.py  executor.py  utils.py
backend/labs/e2b/examples/: __main__.py  code_team.py  run_code_team.py  simple_test.py
backend/labs/selenium/: README.md  __init__.py  config.py  factory.py  utils.py
backend/labs/selenium/controllers/: __init__.py  browser_controller.py
backend/labs/selenium/drivers/: __init__.py  base.py  selenium_driver.py
backend/labs/selenium/examples/: basic_operations.py  continuous_demo.py  test_grid.py
backend/labs/vm_control/: README.md  __init__.py  config.py  utils.py
backend/labs/vm_control/examples/: browser_automation.py  simple_vm_operation.py
backend/models/: __init__.py  agent.py  llm.py
backend/schemas/: browser_task.py
backend/services/browser/: __init__.py  callbacks.py  error_handler.py  message_processor.py  metrics.py  service.py
docker/browserless/: Dockerfile  README.md  build-and-test.sh
docker/postgres/init/: 01-init-db.sh
docker/vmhost/: Dockerfile  start.sh
docs/: README.md
docs/en/api/: reference.md
docs/en/architecture/: overview.md
docs/en/contributing/: index.md
docs/en/deployment/: index.md
docs/zh-CN/: README.md
frontend/: .env.local.example  .gitignore  README.md  README.zh-CN.md  biome.json  package.json  pnpm-lock.yaml
frontend/config/: index.ts  types.ts
(+71 files in other folders)
